# context-packet-manager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  DOCUMENTATION.md  README.md  pyproject.toml
.cpm/3dp-be/: cpm.yml  docs.jsonl  manifest.json
.cpm/3dp-be/faiss/: index.faiss
.cpm/media-storage-be/: cpm.yml  docs.jsonl  manifest.json
.cpm/media-storage-be/faiss/: index.faiss
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion_checks.md
cpm/: README.md  pyproject.toml
cpm/src/: cpm_cli.py  faiss_db.py  packet.py
cpm/src/chunkers/: __init__.py  base.py  brace_fallback.py  java.py  markdown.py  python_ast.py  router.py  text.py  token_budget.py  treesitter_generic.py
cpm/src/cli/: parser.py
cpm/src/cli/commands/: build.py  cache.py  embed.py  install.py  list_remote.py  lookup.py  prune.py  publish.py  query.py  uninstall.py  update.py  use.py
cpm/src/cli/core/: client.py  cpm_pkg.py
cpm/src/embedding/: http_embedder.py
cpm/src/mcp/: server.py
cpm_builtin/: README.md  __init__.py  build.py  embed.py  pkg.py  query.py  registry_client.py
cpm_builtin/chunking/: __init__.py  base.py  brace_fallback.py  java.py  markdown.py  python_ast.py  router.py  schema.py  text.py  token_budget.py  treesitter_generic.py
cpm_builtin/embeddings/: __init__.py  cache.py  client.py  config.py  connector.py  openai.py
cpm_cli/: __init__.py  __main__.py  cli.py  main.py
cpm_core/: __init__.py  app.py  compat.py  config.py  events.py  paths.py  plugin_manager.py  services.py  workspace.py
cpm_core/api/: __init__.py  abc.py  decorators.py
cpm_core/builtins/: __init__.py  benchmark.py  benchmark_trend.py  build.py  commands.py  diff.py  embed.py  install.py  lookup.py  pkg.py  query.py  replay.py
cpm_core/hub/: __init__.py  client.py
cpm_core/oci/: __init__.py  client.py  errors.py  install_state.py  security.py  types.py
cpm_core/packet/: __init__.py  faiss_db.py  io.py  lockfile.py  models.py
cpm_core/plugin/: __init__.py  context.py  errors.py  loader.py  manager.py  manifest.py
cpm_core/policy/: __init__.py  engine.py
cpm_core/registry/: __init__.py  client.py  entry.py  errors.py  registry.py
cpm_plugins/: __init__.py  mcp.py  registry_client.py
cpm_plugins/llm_builder/cpm_llm_builder_plugin/: features.py
cpm_plugins/mcp/: __init__.py  plugin.toml
cpm_plugins/mcp/cpm_mcp_plugin/: __init__.py  entrypoint.py  features.py  reader.py  retriever.py  server.py
docs/: README.md  get-started.md
docs/architecture/: feature-registry-and-services.md  runtime-bootstrap.md  system-overview.md
docs/components/: chunking-and-builders.md  embeddings-subsystem.md  oci-publish-install.md  packet-format-and-lockfile.md  plugin-system.md
docs/contributing/: implementation-patterns.md  update-policy.md
docs/flows/: build-flow.md  publish-install-flow.md  query-flow.md
docs/operations/: registry-service.md  testing-and-quality.md  workspace-and-config.md
docs/plans/: context-supply-chain-master.md  phase-A-sources-cas.md  phase-B-oci-source-verify-lock.md  phase-C-hub-resolve-policy.md  phase-D-hybrid-retrieval.md  phase-E-context-compiler.md  phase-F-policy-engine.md  phase-G-time-travel-replay.md  phase-H-drift-diff.md
embedding_pool/: README.md  pyproject.toml  requirements.txt
embedding_pool/.config/: config.yml  pool.yml
embedding_pool/embedding_pool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
embedding_pool/embedpool/: cli.py
embedding_pool/embedpool/core/: drivers.py  runtime.py  store.py  types.py
embedding_pool/embedpool/server/: __main__.py  app.py
embedding_pool/src/: cli.py
embedding_pool/src/core/: drivers.py  embed_cache.py  runtime.py  util.py  worker.py
embedding_pool/src/server/: __main__.py  app.py
registry/: .database  README.md  pyproject.toml  registry.db  registry.db-shm  registry.db-wal
registry/src/: api.py  cli.py  database.py  requirements.txt  settings.py  storage.py
src/: cpm.yml  pyproject.toml
src/.cpm/media-storage-be/: cpm.yml  manifest.json
src/rag/: cli.py  component.py  embedder.py  packet.py
src/rag/chunkers/: __init__.py  base.py  brace_fallback.py  java.py  java_ast.py  markdown.py  python_ast.py  router.py  text.py  token_budget.py  treesitter_generic.py
src/rag/cli/: parser.py
src/rag/cli/commands/: build.py  cmd_query.py  embed.py  query.py
src/rag/embedding/: embedding_server.py  http_embedder.py
src/src/cpm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/src/rag/cli/: __main__.py
tests/: __init__.py  test_benchmark_trend.py  test_build_command.py  test_chunking_router.py  test_cli.py  test_cli_dispatch.py  test_core.py  test_embed_discovery.py  test_embedding_client.py  test_embeddings.py  test_entrypoint.py  test_events.py  test_mcp_plugin.py  test_packet.py  test_pkg_manager.py  test_plugin_discovery.py  test_plugins.py  test_policy_engine.py  test_publish_flow.py  test_query_command.py  test_query_install_lock.py  test_query_supply_chain_runtime.py  test_registry.py  test_registry_client.py  test_runtime_hub_and_benchmark.py  test_services.py  test_smoke.py  test_workspace.py
tests/fixtures/chunking/: sample.java  sample.md  sample.py
tests/fixtures/plugins/failing_plugin/: plugin.toml
tests/fixtures/plugins/failing_plugin/failing_plugin/: __init__.py  entrypoint.py
tests/fixtures/plugins/override_user/override_plugin/: __init__.py  entrypoint.py  features.py
tests/fixtures/plugins/override_workspace/: plugin.toml
tests/fixtures/plugins/override_workspace/override_plugin/: __init__.py  entrypoint.py  features.py
tests/fixtures/plugins/sample_plugin/: plugin.toml
tests/fixtures/plugins/sample_plugin/sample_plugin/: __init__.py  entrypoint.py  features.py
