[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedding-pool"
version = "0.0.0"
description = "Standalone Embedding Pool with hot-reload, scaling and HTTP API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.24",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "requests>=2.31",
    "numpy>=1.24",
    "sentence-transformers>=2.2.2",
]

[project.scripts]
embedpool = "embedpool.cli:main"
