[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-packet-manager-registry"
version = "0.0.1"
description = "CPM Registry - Package registry server with S3 storage backend"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Andrea Redegalli" }]
keywords = ["registry", "package-manager", "s3", "fastapi", "storage"]

dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "typer>=0.9,<1",
    "boto3>=1.34,<2",
    "python-multipart>=0.0.9,<1",
    "python-dotenv>=1.0,<2",
    "requests>=2.31,<3",
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4,<6",
    "ruff>=0.4,<1",
    "mypy>=1.8,<2",
    "black>=24,<25",
    "httpx>=0.26,<1",
    "types-requests>=2.31,<3",
    "boto3-stubs[s3]>=1.34,<2",
]

docs = [
    "mkdocs>=1.5,<2",
    "mkdocs-material>=9,<10",
    "mkdocstrings[python]>=0.24,<1"
]

all = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4,<6",
    "ruff>=0.4,<1",
    "mypy>=1.8,<2",
    "black>=24,<25",
    "httpx>=0.26,<1",
    "types-requests>=2.31,<3",
    "boto3-stubs[s3]>=1.34,<2",
    "mkdocs>=1.5,<2",
    "mkdocs-material>=9,<10",
    "mkdocstrings[python]>=0.24,<1",
]

[project.scripts]
cpm = "cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
registry = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "B905"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B011"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=registry",
    "--cov-report=term-missing",
    "--cov-report=html"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'