[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpm"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A context packet manager"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
cpm = "rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
